--- a/sass/partials/_controls.scss
+++ b/sass/partials/_controls.scss
@@ -48,9 +48,13 @@
 
 .btn-blue{
     color: $color-blue;
-    border: 2px solid $color-blue;
+    border: 1px solid $color-blue;
     border-radius: 25px;
-
+    padding: 8px 20px 5px 20px;
+    &:hover{
+        color: $color-blue-black;
+        border: 1px solid $color-blue-black;
+    }
 }
 .btn-center{
     text-align: center;
